[package]
name = "sky_trade_compressed_nft"
version = "0.1.0"
description = "Created with Anchor"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "sky_trade_compressed_nft"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
anchor-lang = "0.29.0"
#solana-program = "1.18.8"
mpl-bubblegum = "1.3.0"
spl-account-compression = { version = "0.3.0", features = ["no-entrypoint"] }
